--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "webpack --config config/dev.js -w",
     "build": "node config/build.js",
     "prepublish": "node config/build.js",
-    "postinstall":  "node config/build.js"
+    "postinstall":  "npm install && node config/build.js"
   },
   "keywords": [
     "Google",
