--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "dev": "webpack --config config/dev.js -w",
     "build": "node config/build.js",
-    "prepublish": "node config/build.js",
-    "postinstall":  "npm install && node config/build.js"
+    "prepublish": "node config/build.js"
   },
   "keywords": [
     "Google",
